# jniHelper

./: LICENSE
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ble/lss/com/jnihelper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/ble/lss/com/jnihelper/: MainActivity.java  TestListener.java  TestObject.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
app/src/main/jni/app/: CMakeLists.txt  LogUtil.h  _native.cpp  _native_defs.h  _native_method_map.h  testlib.cpp  testlib.h
app/src/main/jni/jniHelper/: Android.mk  CMakeLists.txt  JniClass.cpp  JniClass.h  JniDataDef_in.h  JniDataDefs.h  JniField.cpp  JniField.h  JniGlobalDef.h  JniHelper.cpp  JniHelper.h  JniMethod.cpp  JniMethod.h  JniObject.cpp  JniObject.h  jniglobaldef.cpp
app/src/main/jni/jniHelper/utils/: jniutils.cpp  jniutils.h
app/src/main/jni/qt/testlib/: testlib.pro
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ble/lss/com/jnihelper/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
