
cmake_minimum_required(VERSION 3.4.1)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../libs/${ANDROID_ABI})

INCLUDE_DIRECTORIES(
		    	${CMAKE_CURRENT_SOURCE_DIR}/jniHelper
		    	)
LINK_DIRECTORIES(
  ${PROJECT_BINARY_DIR}/libs
)


SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D__DEBUG__")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D__DEBUG__")

ADD_SUBDIRECTORY(jniHelper)
ADD_SUBDIRECTORY(app)
